<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
	android:orientation="vertical">
    <LinearLayout        
        android:id="@+id/llLoginInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
   		android:orientation="horizontal" >       
        <TextView
	        android:id="@+id/tvvUser"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:gravity="center_vertical|right"
	        android:text="@string/tvwUser"
	        android:textSize="@dimen/logInfoTextSize_normal"/>
        <TextView
	        android:id="@+id/tvvUserId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:gravity="center_vertical|center"
	        android:text="@string/tvwUsername"
	        android:textSize="@dimen/logInfoTextSize_normal"/>
   		<TextView
	        android:id="@+id/tvvDatabase"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:gravity="center_vertical|right"
	        android:text="@string/tvwDatabase"
	        android:textSize="@dimen/logInfoTextSize_normal"/>
    </LinearLayout> 
    <Button
        android:id="@+id/btnGRN"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
    	android:layout_gravity="center"
        android:text="@string/btnGRN" 
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnGIN"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
    	android:layout_gravity="center"
        android:text="@string/btnGIN" 
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnCrating"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
    	android:layout_gravity="center"
        android:text="@string/btnCrating" 
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnStockCheck"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
    	android:layout_gravity="center"
        android:text="@string/btnStockCheck" 
        android:textSize="20sp"/>   
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
    	android:layout_gravity="center"
        android:text="@string/btnLogOut" 
        android:textSize="20sp"/>  
    

</LinearLayout>