<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:paddingLeft="2dp">
	    
	 <LinearLayout     
	     	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	   		android:background="@color/listView_headerBgColor"
	        android:id="@+id/lilHeaderView">     
	       <TextView
	        android:id="@+id/lvhSeqNo"
			android:text="@string/lvhSeqNo"
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listSeqNo_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
	        android:id="@+id/lvhItemCode"
			android:text="@string/lvhLineNo"
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listSeqNo_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
	        android:id="@+id/lvhProductCode"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhProductCode"
			android:layout_width="@dimen/listProdCode_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>    
	       <TextView
	        android:id="@+id/lvhDescription"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhDescription"
			android:layout_width="@dimen/listProdDesc_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
	        android:id="@+id/lvhBatch"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhBatch"
			android:layout_width="@dimen/listBatchNo_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>    
	       <TextView
	        android:id="@+id/lvhLot"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhLot"
			android:layout_width="@dimen/listLotNo_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
	        android:id="@+id/lvhActQuantity"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhActQuantity"
			android:layout_width="@dimen/listQty_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>       
	       <TextView
	        android:id="@+id/lvhUOM"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhUOM"
			android:layout_width="@dimen/listUOM_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
	        android:id="@+id/lvhSrvQuantity"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/lvhSrvQuantity"
			android:layout_width="@dimen/listQty_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>  		
	       <TextView
	        android:id="@+id/lvhScannedSerialNos"
			android:layout_height="@dimen/listViewHeader_height"
			android:text="@string/tvwSerialCount"
			android:layout_width="@dimen/listScannedSerialNos_width"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>	
	       
	 </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/lilHeaderView"   
	    android:orientation="vertical">
		    <ListView  
		    android:id="@+id/lvvGrnDetailList"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:divider="#000000" 
		    />
	</LinearLayout>
	</RelativeLayout>
</HorizontalScrollView>