<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  	<LinearLayout 
       android:id="@+id/ll_ginPickList"
   	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="3dp"
       android:layout_marginLeft="5dp"
       android:orientation="vertical">
	  <Button 
	       android:id="@+id/btn_ginProdPickNewLocation"
		   android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_marginTop="5dp"
	       android:textSize="20sp"
	       android:textStyle="bold"
	       android:text="@string/btnPickNewLocation"
	       android:visibility="gone"/>    
  	   <LinearLayout            
		   android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_marginTop="5dp"
	   	   android:background="@color/listView_headerBgColor">
	       <TextView
		        android:id="@+id/lvh_ginPickZone"
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listZone_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/tvwZone"/>  
	       <TextView
		        android:id="@+id/lvh_ginPickRow"
				android:layout_height="@dimen/listViewHeader_height" 
				android:layout_width="@dimen/listRow_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/tvwRow"/>  
	       <TextView
		        android:id="@+id/lvh_ginPickColumn"
				android:layout_height="@dimen/listViewHeader_height"  
				android:layout_width="@dimen/listColumn_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/tvwColumn"/>  
	       <TextView
		        android:id="@+id/lvh_ginPickTier"
				android:layout_height="@dimen/listViewHeader_height"  
				android:layout_width="@dimen/listTier_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/tvwTier"/>  
	       <TextView
		        android:id="@+id/lvh_ginItemCode"
				android:layout_height="@dimen/listViewHeader_height"  
				android:layout_width="@dimen/listLineNo_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/lvhLineNo"/>  
	       <TextView
		        android:id="@+id/lvh_ginProdCode"
				android:layout_height="@dimen/listViewHeader_height"  
				android:layout_width="@dimen/listProdCode_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/lvhProductCode"/>  
	       <TextView
		        android:id="@+id/lvh_ginPickActQty"
				android:layout_height="@dimen/listViewHeader_height" 
				android:layout_width="@dimen/listQty_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/lvhActQuantity"/> 
	       <TextView
		        android:id="@+id/lvh_ginPickSrvQty"
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listQty_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/lvhSrvQuantity"/>   
	       <TextView
		        android:id="@+id/lvh_ginSeqNo"
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listSeqNo_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"
		        android:text="@string/lvhSeqNo"/>  
	   </LinearLayout>  
	   <LinearLayout            
		   android:layout_width="wrap_content"
	       android:layout_height="wrap_content">
	       <ListView
			    android:id="@+id/lvvGinPickListByLocation"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:divider="#ffffff" />  
	   </LinearLayout>              
	</LinearLayout>
</HorizontalScrollView>