<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="2dp">   
		<LinearLayout     
	     	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
		    android:layout_marginTop="3dp" 
	    	android:background="@color/listView_headerBgColor"
	        android:id="@+id/lilHeaderView">  
	       <TextView
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listPalletID_width"
			android:text="@string/tvwPallet_Id"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>    
	       <TextView
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listZone_width"
			android:text="@string/tvwZone"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listRow_width"
			android:text="@string/tvwRow"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>     
	       <TextView
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listColumn_width"
			android:text="@string/tvwColumn"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/>
	       <TextView
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listTier_width"
			android:text="@string/tvwTier"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/> 
			<TextView
			android:layout_height="@dimen/listViewHeader_height"
			android:layout_width="@dimen/listQty_width"
			android:text="@string/lvhActQuantity"
			android:textStyle="bold"
			android:textSize="@dimen/headerTextSize_normal"
			android:textColor="@color/listView_headerTextColor"/> 
		 </LinearLayout>
		 <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lilHeaderView"   
		    android:gravity="center_vertical|left">
			<ListView  
			    android:id="@+id/lvvUnbalancePutting"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:divider="#ffffff"/>    
		 </LinearLayout>	
	</RelativeLayout>
</HorizontalScrollView>