<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp">
         
    <TextView
       	android:id="@+id/tvwCrateUnallocatedProds"
		android:text="@string/tvwUnAllocatedProd"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textSize="20sp"
		android:textStyle="bold"
		android:drawableRight="@android:color/black"
		android:paddingRight="5dp"
		android:textColor="#f5f5f5"/>
	<LinearLayout     
	    android:layout_below="@+id/tvwCrateUnallocatedProds"
     	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="3dp"
        android:id="@+id/lilHeaderView">     
	       <TextView
		        android:id="@+id/tvwItemCode"
				android:layout_height="@dimen/listViewHeader_height"
				android:text="@string/lvhLineNo"
				android:layout_width="@dimen/listLineNo_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>   
	       <TextView
		        android:id="@+id/tvwProdCode"
				android:layout_height="@dimen/listViewHeader_height"
				android:text="@string/lvhProductCode"
				android:layout_width="@dimen/listProdCode_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>    
	       <TextView
		        android:id="@+id/tvwDesc"
				android:layout_height="@dimen/listViewHeader_height"
				android:text="@string/lvhDescription"
				android:layout_width="@dimen/listProdDesc_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>    
	       <TextView
		        android:id="@+id/tvwUOM"
				android:layout_height="@dimen/listViewHeader_height"
				android:text="@string/lvhUOM"
				android:layout_width="@dimen/listUOM_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>   
	       <TextView
		        android:id="@+id/tvwBalQty"
				android:layout_height="@dimen/listViewHeader_height"
				android:text="@string/lvhBalQuantity"
				android:layout_width="@dimen/listQty_width"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/> 			
	       
	 </LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/lilHeaderView"  
	    android:orientation="vertical">
		    <ListView  
		    android:id="@+id/lvvCrateProdList"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:divider="#ffffff" 
		    />
	</LinearLayout>
</RelativeLayout>