<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp">    
	<Button
        android:id="@+id/btnAddSearchPut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnAddPallet"
         />

	<HorizontalScrollView  
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
		android:layout_below="@+id/btnAddSearchPut">
	     <RelativeLayout     
	     	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
		    android:id="@+id/lilBtnAdd">  
		 	<LinearLayout     
		     	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
			    android:layout_marginTop="3dp" 
	    		android:background="@color/listView_headerBgColor"
		        android:id="@+id/lilHeaderView">  
		       <TextView
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listPalletID_width"
				android:text="@string/tvwPallet_Id"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>    
		       <TextView
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listZone_width"
				android:text="@string/tvwZone"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>
		       <TextView
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listRow_width"
				android:text="@string/tvwRow"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>     
		       <TextView
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listColumn_width"
				android:text="@string/tvwColumn"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>
		       <TextView
				android:layout_height="@dimen/listViewHeader_height"
				android:layout_width="@dimen/listTier_width"
				android:text="@string/tvwTier"
				android:textStyle="bold"
				android:textSize="@dimen/headerTextSize_normal"
				android:textColor="@color/listView_headerTextColor"/>        
			 </LinearLayout>
			 <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_below="@+id/lilHeaderView"   
			    android:orientation="vertical"
			    android:gravity="center_vertical|left">	
				    <ListView  
				    android:id="@+id/lvvSearchPutting"
				    android:layout_width="wrap_content" 
				    android:layout_height="fill_parent"
				    android:divider="#ffffff" 
				    />    
			 </LinearLayout>
		</RelativeLayout>
	</HorizontalScrollView>
</RelativeLayout>